--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
           </div>
           <div class="col-sm-3 d-flex justify-content-center align-items-center">
             <p>Наши соц сети</p>
-            <a href="#!"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://t.me/urolov_tuit"><i class="fa fa-facebook" aria-hidden="true"></i></a>
             <a href="https://t.me/urolov_tuit"><i class="fa fa-telegram" aria-hidden="true"></i></a>
-            <a href="#!"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
+            <a href="https://t.me/urolov_tuit"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
